@@ -1,3 +1,11 @@
+Thu Oct 11 17:52:32 2001  Priyanka Gontla  <pgontla@ece.uci.edu>
+
+	* ace/SOCK_Dgram_Mcast.cpp:
+	  Somehow the file didnt get committed yesterday. So, committing
+	  the following change now.
+
+	  Wed Oct 10 16:56:18 2001  Priyanka Gontla  <pgontla@ece.uci.edu>
+
 Thu Oct 11 10:57:58 2001  Carlos O'Ryan  <coryan@uci.edu>
 
 	* ace/RB_Tree.h:
